Disable parameterized test invocations by display name (#163 / #175)
Jupiter's `@Disabled`-based annotations disable entire test template
methods and can thus not be used to disable individual parameterized
test invocations. This extension adds that capability by matching
based on display name. Display names can be evaluated by searching
for substrings or matching against regular expressions (or both).

Because this extension belongs into the `params` package but also
needs to access `PioneerAnnotationUtils`, we needed to find a way
to make them accessible without making the class public. To prevent
duplication, we went with a (clever? abominable?) reflection hack.

Closes: #163
PR: #175

--- a/docs/docs-nav.yml
+++ b/docs/docs-nav.yml
@@ -8,6 +8,8 @@
         url: /docs/environment-variables/
       - title: "@DefaultLocale and @DefaultTimeZone"
         url: /docs/default-locale-timezone/
+      - title: "@DisableIfDisplayName"
+        url: /docs/disable-if-display-name/
       - title: "Range Sources"
         url: /docs/range-sources/
       - title: "@RetryingTest"
@@ -20,3 +22,4 @@
         url: /docs/temp-directory/
       - title: "Vintage @Test"
         url: /docs/vintage-test/
+
