--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -46,6 +46,7 @@ jobs:
         uses: eskatos/gradle-command-action@v1
         with:
           arguments: --refresh-dependencies --stacktrace --scan clean build
+          wrapper-cache-enabled: false
       - name: Sonarqube
         if: matrix.java == '11' && matrix.os == 'ubuntu'
         env:
