Improving and fixing releasing process (#284 / #295)
Releasing process was failing, as it could not checkout the ref
'master'. With this changes we bound the releasing process to
the master branch, as we are now checking out the master
specifically.

Furthermore we found issues, with some orders in the releasing
process, which could prevent the deletion of the tag on a failure.

Additionally we added a new last step to our normal build pipeline,
so the releasing process will be blocked by just one action and not
multiple ones. This will be needed in the future, when we start
using multi-version builds.

Closes: #284
PR: #295

--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -8,6 +8,7 @@ on:
     branches: 'master'
     tags-ignore: 
       - 'v**'
+      - 'releaseTrigger'
   pull_request:
     branches: '*'
 
@@ -53,3 +54,11 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: "61ab2579215aa8a0024a2f9368fc1298fdecfd18"
         run: ./gradlew jacocoTestReport sonarqube --stacktrace -i
+
+  buildDone:
+    name: buildOk
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
+      - name: buildOk
+        run: echo 'all builds passed'
