--- a/.github/workflows/releaseTrigger.yml
+++ b/.github/workflows/releaseTrigger.yml
@@ -11,15 +11,18 @@ jobs:
     runs-on: ubuntu-latest
     name: releasing
     steps:
-      - name: Wait For Other Builds To Succeed
-        # This steps waits for all github actions builds to suceed, before continuing.
-        # Currently we only have our default action, so we can ensure, 
-        # that our codebase builds correctly
-        uses: jitterbit/await-check-suites@v1
-        with:
-          appSlugFilter: 'github-actions'
-          timeoutSeconds: '300'
       - uses: actions/checkout@v2
+        with:
+          ref: master
+      - name: Wait on builds
+        uses: lewagon/wait-on-check-action@v0.1-beta.2
+        with:
+          ref: ${{ github.sha }}
+          check-name: buildOk
+          repo-token: ${{ secrets.GITHUB_TOKEN }}
+          wait-interval: 300
+      - name: Fetch unshallow
+        run: git fetch --prune --unshallow
       - name: Setup java
         uses: actions/setup-java@v1
         with:
