--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -1,7 +1,7 @@
 # This workflow will build a Java project with Gradle
 # For more information see: https://help.github.com/actions/language-and-framework-guides/building-and-testing-java-with-gradle
 
-name: JUnit Pioneer
+name: Build
 
 on:
   push:
@@ -20,7 +20,7 @@ jobs:
         # test against latest update of each major Java version, as well as specific updates of LTS versions:
         java: [ 8, 11, 14 ]
         os: [ubuntu, windows, macos]
-    name: Build on ${{ matrix.os }} with Java ${{ matrix.java }}
+    name: on ${{ matrix.os }} with Java ${{ matrix.java }}
     steps:
       - name: Check out repo
         uses: actions/checkout@v2
