Align documentation headers, page descriptions and ToC entries (#311 / #312)
This PR aligns the formatting and wording of headers, entries
in the ToC (navigation) and page descriptions.
Entry don't use the annotation names (including the @-symbol) anymore.
Instead a natural language is used. 

These changes should also increases rating of search engines.

--- a/docs/docs-nav.yml
+++ b/docs/docs-nav.yml
@@ -2,23 +2,23 @@
 #       won't be highlighted.
   - title: Features
     children:
-      - title: "@ClearSystemProperty and @SetSystemProperty"
+      - title: "Clearing or Setting System Properties"
         url: /docs/system-properties/
-      - title: "@ClearEnvironmentVariable and @SetEnvironmentVariable"
+      - title: "Clearing or Setting Environment Variables"
         url: /docs/environment-variables/
-      - title: "@DefaultLocale and @DefaultTimeZone"
+      - title: "Default Locale and TimeZone"
         url: /docs/default-locale-timezone/
-      - title: "@DisableIfDisplayName"
+      - title: "Disable Based on DisplayName"
         url: /docs/disable-if-display-name/
+      - title: "Publishing Report Entries"
+        url: /docs/report-entries/
       - title: "Range Sources"
         url: /docs/range-sources/
-      - title: "@RetryingTest"
+      - title: "Retrying Failing Tests"
         url: /docs/retrying-test/
-      - title: "Report entries"
-        url: /docs/report-entries/
-      - title: "Standard input/output"
+      - title: "Standard Input and Output"
         url: /docs/standard-input-output/
-      - title: "TempDirectory"
+      - title: "Temporary Files and Directories"
         url: /docs/temp-directory/
       - title: "Vintage @Test"
         url: /docs/vintage-test/
