--- a/.github/workflows/gradle-wrapper-validation.yml
+++ b/.github/workflows/gradle-wrapper-validation.yml
@@ -1,4 +1,4 @@
-name: "Validate Gradle Wrapper"
+name: Gradle wrapper validation
 
 on:
   push:
@@ -10,8 +10,10 @@ on:
 
 jobs:
   validation:
-    name: "Validation"
     runs-on: ubuntu-latest
+    name: on ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - uses: gradle/wrapper-validation-action@v1
+      - name: Check out repo
+        uses: actions/checkout@v2
+      - name: Validate Gradle wrapper
+        uses: gradle/wrapper-validation-action@v1
