--- a/.github/workflows/release-build.yml
+++ b/.github/workflows/release-build.yml
@@ -1,5 +1,4 @@
-
-name: Release
+name: Release build
 
 on:
   workflow_dispatch:
@@ -7,9 +6,10 @@ on:
 jobs:
   deploy:
     runs-on: ubuntu-latest
-    name: releasing
+    name: on ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - name: Check out repo
+        uses: actions/checkout@v2
       - name: Wait on builds
         uses: lewagon/wait-on-check-action@v0.1-beta.2
         with:
@@ -17,13 +17,11 @@ jobs:
           check-name: buildOk
           repo-token: ${{ secrets.GITHUB_TOKEN }}
           wait-interval: 300
-      - name: Fetch unshallow
-        run: git fetch --prune --unshallow
-      - name: Setup java
+      - name: Set up java
         uses: actions/setup-java@v1
         with:
           java-version: 8
-      - name: Perform Release
+      - name: Perform release
         uses: eskatos/gradle-command-action@v1
         env:
           # shipkit does not support GitHub Actions for now, hence that we simulate to be Travis CI
@@ -37,7 +35,7 @@ jobs:
           NEXUS_TOKEN_PASSWORD: ${{ secrets.NEXUS_TOKEN_PASSWORD }}
         with:
           arguments: ciPerformRelease
-      - name: Trigger Website Build
+      - name: Trigger website build
         uses: peter-evans/repository-dispatch@v1
         with:
           token: ${{ secrets.GH_WRITE_TOKEN }}
