--- a/.github/workflows/main-build.yml
+++ b/.github/workflows/main-build.yml
@@ -11,6 +11,7 @@ on:
 jobs:
   build:
     runs-on: ${{ matrix.os }}-latest
+    timeout-minutes: 15
     strategy:
       matrix:
         # test against latest update of each major Java version, as well as specific updates of LTS versions:
