Upgrade to Gradle 6.6.1 (N/A / #328)
This PR upgrades to Gradle 6.6.1, the current version.

To ensure the build still works the sonar plugin was
also updated to version 3.0 and the heap size for 
Github Actions was increased to 4GB as some jobs
ran out of memory.


Issue: none
PR: #328

--- a/gradle.properties
+++ b/gradle.properties
@@ -2,3 +2,6 @@
 # and the minor version is always in sync. Due to that fact, we just set
 # the minor verison.
 junitMinorVersion=5.2
+
+# Ensure sufficient heap size, especially for Sonar.
+org.gradle.jvmargs=-Xmx4g
