Add timeout to Github Actions (#322 / #330)
This PR adds timeouts for three outstanding
Github Actions workflows.

closes: #322
PR: #330

--- a/.github/workflows/gradle-wrapper-validation.yml
+++ b/.github/workflows/gradle-wrapper-validation.yml
@@ -11,6 +11,7 @@ on:
 jobs:
   validation:
     runs-on: ubuntu-latest
+    timeout-minutes: 15
     name: on ubuntu-latest
     steps:
       - name: Check out repo
