--- a/.github/workflows/module-build.yml
+++ b/.github/workflows/module-build.yml
@@ -21,9 +21,6 @@ jobs:
     steps:
       - name: Check out repo
         uses: actions/checkout@v2
-        with:
-          # fetch unshallow to enable blame for Sonar
-          fetch-depth: 0
       - name: Set up java
         uses: actions/setup-java@v1
         with:
@@ -34,11 +31,10 @@ jobs:
           path: ~/.gradle/caches/
           key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*') }}
           restore-keys: ${{ runner.os }}-gradle-
-      - name: Gradle build on Java except 8
+      - name: Gradle build on Java 11+
         uses: eskatos/gradle-command-action@v1
         with:
           arguments: -PmodularBuild --refresh-dependencies --stacktrace --scan clean build
-          wrapper-cache-enabled: false
 
   buildDone:
     name: buildOk
