Introduce @CartesianProductText extension (#68 / #321)
The Cartesian product extension uses the test template extension
point to create one test per combination of input parameters. The
parameters' possible values are specified with
`@CartesianValueSource`.

Closes: #68
PR: #321

--- a/docs/docs-nav.yml
+++ b/docs/docs-nav.yml
@@ -2,6 +2,8 @@
 #       won't be highlighted.
   - title: Features
     children:
+      - title: "Cartesian product of all test parameters"
+        url: /docs/cartesian-product/
       - title: "Clearing or Setting System Properties"
         url: /docs/system-properties/
       - title: "Clearing or Setting Environment Variables"
