--- a/.github/workflows/junit5-build.yml
+++ b/.github/workflows/junit5-build.yml
@@ -15,7 +15,7 @@ jobs:
     continue-on-error: true
     strategy:
       matrix:
-        junit-version: [ '5.5.0', '5.5.1', '5.5.2', '5.6.0', '5.6.1', '5.6.2' ]
+        junit-version: [ '5.5.0', '5.5.1', '5.5.2', '5.6.0', '5.6.1', '5.6.2', '5.6.3' ]
     name: with JUnit ${{ matrix.junit-version }} on ubuntu-latest
     steps:
       - name: Check out repo
