--- a/docs/docs-nav.yml
+++ b/docs/docs-nav.yml
@@ -12,6 +12,8 @@
         url: /docs/default-locale-timezone/
       - title: "Disable Based on DisplayName"
         url: /docs/disable-if-display-name/
+      - title: "Issue information"
+        url: /docs/issue/
       - title: "Publishing Report Entries"
         url: /docs/report-entries/
       - title: "Range Sources"
