--- a/docs/docs-nav.yml
+++ b/docs/docs-nav.yml
@@ -22,6 +22,8 @@
         url: /docs/retrying-test/
       - title: "Standard Input and Output"
         url: /docs/standard-input-output/
+      - title: "Measuring time with a Stopwatch"
+        url: /docs/stopwatch/
       - title: "Temporary Files and Directories (removed in 1.0)"
         url: /docs/temp-directory/
       - title: "Vintage @Test"
