--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -7,8 +7,14 @@ updates:
     interval: monthly
   ignore:
     - dependency-name: "org.junit.*"
+  labels:
+    - "📖 theme: build"
+    - "🛸 3rd-party: Gradle"
 
 - package-ecosystem: github-actions
   directory: "/"
   schedule:
     interval: monthly
+  labels:
+    - "📖 theme: infrastructure"
+    - "🛸 3rd-party: Github Actions"
