Rename ToC header for feature documentation
With Tests Reports, a second project will soon split the navigation
with the extension pack, so headers need to better distinguish
the two.

--- a/docs/docs-nav.yml
+++ b/docs/docs-nav.yml
@@ -1,6 +1,6 @@
 # NOTE: The URLs need a trailing slash or the selected nav element
 #       won't be highlighted.
-  - title: Features
+  - title: JUnit Pioneer Extensions
     children:
       - title: "Cartesian product of all test parameters"
         url: /docs/cartesian-product/
