Rename main branch from `master` to `main` (#331)
Reasons for renaming the branch:
https://sfconservancy.org/news/2020/jun/23/gitbranchname/

Closes: #331

--- a/.github/workflows/gradle-wrapper-validation.yml
+++ b/.github/workflows/gradle-wrapper-validation.yml
@@ -2,7 +2,7 @@ name: Gradle wrapper validation
 
 on:
   push:
-    branches: 'master'
+    branches: 'main'
     tags-ignore:
       - 'v**'
   pull_request:
