--- a/.github/workflows/module-build.yml
+++ b/.github/workflows/module-build.yml
@@ -2,7 +2,7 @@ name: Module build on Java 11+
 
 on:
   push:
-    branches: 'master'
+    branches: 'main'
     tags-ignore:
       - 'v**'
   pull_request:
