--- a/.github/workflows/main-build.yml
+++ b/.github/workflows/main-build.yml
@@ -16,7 +16,7 @@ jobs:
       matrix:
         # test against latest update of each major Java version, as well as specific updates of LTS versions:
         java: [ 8, 11, 16 ]
-        os: [ubuntu, macos]
+        os: [ubuntu, macos, windows]
     name: with Java ${{ matrix.java }} on ${{ matrix.os }}
     steps:
       - name: Check out repo
