--- a/version.properties
+++ b/version.properties
@@ -1,3 +1,8 @@
-# Version of produced binaries.
-# The '*' part is automatically resolved by shipkit-auto-version Gradle plugin (https://github.com/shipkit/shipkit-auto-version).
-version=1.3.*
+# Shipkit auto-versioning-plugin needs this file and `version` property or it
+# can't configure itself and will fail the build. For actual releases, this
+# version is overriden with a Gradle property, so it's not needed then.
+# Hence, we set a bogus value and don't update it.
+#
+# When removing this file, check CONTRIBUTING.md for mentions of it.
+#
+version=1.0.*
