--- a/.github/workflows/release-build.yml
+++ b/.github/workflows/release-build.yml
@@ -31,6 +31,8 @@ jobs:
       - name: Perform release
         uses: eskatos/gradle-command-action@v1
         env:
+          # used to trigger website uild
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           # used by `io.github.gradle-nexus.publish-plugin` to sign artifacts
           ORG_GRADLE_PROJECT_signingKey: ${{ secrets.JUNIT_PIONEER_PGP_SECRET_KEY }}
           ORG_GRADLE_PROJECT_signingPassword: ${{ secrets.JUNIT_PIONEER_PGP_PASSWORD }}
