Disable parameterized tests by argument values (#313 / #368)
The `InvocationInterceptor` API added in JUnit Jupiter 5.5 allows
inspection of arguments passed to parameterized test executions.
The new `DisableIfArgumentExtension` uses that to disable individual
test executions based their arguments.

The documentation of the new feature was added to the one for
"Disable if display name", but then that had to change its URL to
make sense with the wider scope. A stub was created in place of the
old documentation that forwards to the new one.

Closes: #313
PR: #368

--- a/docs/docs-nav.yml
+++ b/docs/docs-nav.yml
@@ -10,8 +10,8 @@
         url: /docs/environment-variables/
       - title: "Default Locale and TimeZone"
         url: /docs/default-locale-timezone/
-      - title: "Disable Based on DisplayName"
-        url: /docs/disable-if-display-name/
+      - title: "Disable Parameterized Tests"
+        url: /docs/disable-parameterized-tests/
       - title: "Issue information"
         url: /docs/issue/
       - title: "Publishing Report Entries"
