Restructure build into a mono build (#474 / #495)
Instead of multiple smaller builds, we introduces one mono build. This
allows us to provide a short and useful feedback cycle for
contributors, but ensures safety regarding merging for maintainers.
As for maintainers it does not matter how long our build runs before
a merge, and in the end it does not matter if it takes hours.

Furthermore our release build is now part of the pipeline and
we do not need to wait for another build for releasing.

Closes: #474 
PR: #495

--- a/gradle.properties
+++ b/gradle.properties
@@ -2,3 +2,5 @@ junitVersion=5.7.1
 
 # Ensure sufficient heap size, especially for Sonar.
 org.gradle.jvmargs=-Xmx8g
+modularBuild=false
+org.gradle.java.installations.fromEnv=JDK_EXPERIMENTAL
