--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -61,9 +61,10 @@ jobs:
       - name: Check out repo
         uses: actions/checkout@v2
       - name: Set up Java
-        uses: actions/setup-java@v1
+        uses: actions/setup-java@v2
         with:
           java-version: ${{ matrix.java }}
+          distribution: adopt
       - name: Cache Gradle
         uses: actions/cache@v2
         with:
@@ -90,9 +91,10 @@ jobs:
           # Sonar needs the whole Git history for issue assignment
           fetch-depth: 0
       - name: Set up Java
-        uses: actions/setup-java@v1
+        uses: actions/setup-java@v2
         with:
           java-version: 11
+          distribution: adopt
       - name: Cache Gradle
         uses: actions/cache@v2
         with:
@@ -137,9 +139,10 @@ jobs:
       - name: Check out repo
         uses: actions/checkout@v2
       - name: Set up Java
-        uses: actions/setup-java@v1
+        uses: actions/setup-java@v2
         with:
           java-version: ${{ matrix.java }}
+          distribution: adopt
       - name: Cache Gradle
         uses: actions/cache@v2
         with:
@@ -218,9 +221,10 @@ jobs:
           # Shipkit needs the whole Git history for changelog generation
           fetch-depth: 0
       - name: Set up Java
-        uses: actions/setup-java@v1
+        uses: actions/setup-java@v2
         with:
           java-version: 8
+          distribution: adopt
       - name: Perform release
         uses: eskatos/gradle-command-action@v1
         env:
