Update JUnit versions in build matrix (#512 / #511)
As of today, 5.7.2 is the latest stable and 5.8.0-RC1 the latest
non-stable version.

Closes: #512
PR: #511

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -128,7 +128,7 @@ jobs:
     strategy:
       matrix:
         java: [ 8, 11, 16 ]
-        junit-version: [ '5.7.0', '5.7.1', '5.8.0-M1' ]
+        junit-version: [ '5.7.0', '5.7.2', '5.8.0-RC1' ]
         modular: [true, false]
         os: [ubuntu, macos, windows]
         exclude:
