--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -65,12 +65,7 @@ jobs:
         with:
           java-version: ${{ matrix.java }}
           distribution: adopt
-      - name: Cache Gradle
-        uses: actions/cache@v2
-        with:
-          path: ~/.gradle/caches/
-          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*') }}
-          restore-keys: ${{ runner.os }}-gradle-
+          cache: 'gradle'
       - name: Gradle build
         uses: eskatos/gradle-command-action@v1
         with:
@@ -95,12 +90,7 @@ jobs:
         with:
           java-version: 11
           distribution: adopt
-      - name: Cache Gradle
-        uses: actions/cache@v2
-        with:
-          path: ~/.gradle/caches/
-          key: ubuntu-gradle-${{ hashFiles('**/*.gradle*') }}
-          restore-keys: ubuntu-gradle-
+          cache: 'gradle'
       - name: Cache SonarCloud results
         uses: actions/cache@v2
         with:
@@ -143,12 +133,7 @@ jobs:
         with:
           java-version: ${{ matrix.java }}
           distribution: adopt
-      - name: Cache Gradle
-        uses: actions/cache@v2
-        with:
-          path: ~/.gradle/caches/
-          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*') }}
-          restore-keys: ${{ runner.os }}-gradle-
+          cache: 'gradle'
       - name: Gradle build
         uses: eskatos/gradle-command-action@v1
         with:
@@ -189,12 +174,7 @@ jobs:
         with:
           java-version: 16
           distribution: adopt
-      - name: Cache Gradle
-        uses: actions/cache@v2
-        with:
-          path: ~/.gradle/caches/
-          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*') }}
-          restore-keys: ${{ runner.os }}-gradle-
+          cache: 'gradle'
       - name: Gradle toolchains
         uses: eskatos/gradle-command-action@v1
         with:
