Only adjust .idea/vcs.xml if it exists (#532)
While working on #491, I saw that buildSrc/build.gradle was
failing if the .idea directory existed but .idea/vcs.xml did not,
which is what was happened for me with my version of IntelliJ IDEA.

This commit makes the build script more lenient by only trying to
append issue-related XML tags to .idea/vcs.xml if it exists,
rather than relying on the presence of just the .idea directory.

Related discussion: #491
PR: #532

--- a/buildSrc/build.gradle
+++ b/buildSrc/build.gradle
@@ -3,24 +3,26 @@ import groovy.xml.XmlUtil
 build {
 	doLast {
 		def ideaFolder = new File('.idea');
-		if(ideaFolder.exists() && ideaFolder.isDirectory()) {
+		if (ideaFolder.exists() && ideaFolder.isDirectory()) {
 			def xmlFile = new File(".idea/vcs.xml")
-			def xml = new XmlSlurper().parse(xmlFile)
-			xml.component.find {it.@name == 'IssueNavigationConfiguration'}.replaceNode {}
-			xml.appendNode {
-				component(name: "IssueNavigationConfiguration") {
-					option(name: 'links') {
-						list {
-							IssueNavigationLink {
-								option(name: "issueRegexp", value: '#(\\d+)')
-								option(name: "linkRegexp", value: 'https://github.com/junit-pioneer/junit-pioneer/issues/$1')
+			if (xmlFile.exists() && xmlFile.isFile()) {
+				def xml = new XmlSlurper().parse(xmlFile)
+				xml.component.find { it.@name == 'IssueNavigationConfiguration' }.replaceNode {}
+				xml.appendNode {
+					component(name: "IssueNavigationConfiguration") {
+						option(name: 'links') {
+							list {
+								IssueNavigationLink {
+									option(name: "issueRegexp", value: '#(\\d+)')
+									option(name: "linkRegexp", value: 'https://github.com/junit-pioneer/junit-pioneer/issues/$1')
+								}
 							}
 						}
 					}
 				}
-			}
-			xmlFile.withWriter {out->
-				XmlUtil.serialize(xml, out)
+				xmlFile.withWriter { out ->
+					XmlUtil.serialize(xml, out)
+				}
 			}
 		}
 	}
