Add @DisabledUntil annotation and extension (#366) (#529)
Add the @DisabledUntil annotation and corresponding extension. The
implementation uses a required 'date' parameter and may also be
inherited via the @Inherited meta-annotation. Tests annotated with
@DisabledUntil will be skipped if the date is in the future, i.e.
today plus N days where N > 0. If the 'date' parameter happens to be
today or any day in the past, the test will be executed but a warning
report entry will be published.

Resolves: #366
PR: #529

--- a/docs/docs-nav.yml
+++ b/docs/docs-nav.yml
@@ -10,6 +10,8 @@
         url: /docs/environment-variables/
       - title: "Default Locale and TimeZone"
         url: /docs/default-locale-timezone/
+      - title: "Temporarily disable a test"
+        url: /docs/disabled-until/
       - title: "Disable Parameterized Tests"
         url: /docs/disable-parameterized-tests/
       - title: "Issue information"
