--- a/.gitignore
+++ b/.gitignore
@@ -33,7 +33,7 @@ local.properties
 build/
 
 # JVM crash logs
-# see http://www.java.com/en/download/help/error_hotspot.xml
+# see https://www.java.com/en/download/help/error_hotspot.html
 hs_err_pid*
 
 # MacOS
