Add @DisableIfTestFails extension (#467 / #505)
This extension disables all remaining tests in a container if one of
them failed. Failed assumptions are ignored (i.e. they don't disable
other tests) but assertions aren't by default (can be configured with
the `onAssertion` attribute). All exceptions lead to disabling
remaining tests (can be configured with the `with` attribute).

Closes: #467
PR: #505

--- a/docs/docs-nav.yml
+++ b/docs/docs-nav.yml
@@ -12,6 +12,8 @@
         url: /docs/default-locale-timezone/
       - title: "Temporarily disable a test"
         url: /docs/disabled-until/
+      - title: "Disable If Test Fails"
+        url: /docs/disable-if-test-fails/
       - title: "Disable Parameterized Tests"
         url: /docs/disable-parameterized-tests/
       - title: "Issue information"
