Support JSON sources for parametrized tests (#101 / #492)
This extension needs a JSON parser. In order not do pull in a
specific run-time dependency, it makes use of Gradle's feature
variants as described in CONTRIBUTING.md (including Checkstyle
rules). For now, only Jackson is supported as JSON parser. Other
parsers can be added in future versions if users need them.

Closes: #101
PR: #492

--- a/docs/docs-nav.yml
+++ b/docs/docs-nav.yml
@@ -18,6 +18,8 @@
         url: /docs/disable-parameterized-tests/
       - title: "Issue information"
         url: /docs/issue/
+      - title: "JSON Argument Source"
+        url: /docs/json-argument-source
       - title: "Publishing Report Entries"
         url: /docs/report-entries/
       - title: "Range Sources"
